# TTKV

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  reproduce.sh
models/: salience_scorer_trained.pt
paper/: main.tex
results/: ablation_study.json  exp_code_completion.json  exp_latency_overhead.json  exp_needle_in_haystack.json  multi_needle_benchmark.json  real_compression_qwen.json
src/ttkv/: __init__.py  attention_scorer.py  auto_config.py  core.py  train.py  type_prior.py
tests/core/: baselines.py  benchmark_comprehensive.py  generate_tradeoff_curves.py  test_compression.py  test_needle_in_haystack.py  test_slow_burn.py
tests/experiments/: exp12_generate_heatmaps.py  exp5_table_discrepancy.py  exp7_quality_matched.py  exp8_ema_ablation.py  exp_ablation_study.py  exp_code_completion.py  exp_component_ablation.py  exp_cross_model_generalization.py  exp_domain_diversity.py  exp_latency_overhead.py  exp_multi_needle_benchmark.py  exp_needle_in_haystack.py
tests/real_experiments/: __init__.py  bench_perplexity.py  data_utils.py  generator.py  test_generator.py
tests/real_experiments/results/: real_perplexity.json  real_perplexity_long.json
