[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttkv"
version = "1.0.0"
description = "Salience-Aware Tiered KV Cache Compression for Long-Context Inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zabdiel Pérez Muñiz"}
]
keywords = ["kv-cache", "compression", "transformers", "llm", "memory", "attention"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-tqdm>=4.65.0",
]
quantization = [
    "bitsandbytes>=0.40.0",
]
viz = [
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.urls]
"Homepage" = "https://github.com/zabwie/ttkv"
"Bug Tracker" = "https://github.com/zabwie/ttkv/issues"
"Documentation" = "https://github.com/zabwie/ttkv#readme"
"Source" = "https://github.com/zabwie/ttkv"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ttkv" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false